--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <a href="https://play.google.com/store/apps/details?id=app.medicalid">
     <img src="https://lh3.ggpht.com/AwmXwVlAgtd__GtBIOr05J6VwtE7JMQSfK858Vn7iPF1YgQA0Wz51letH_mxCt6OIg=h150-rw" alt="Medical ID - The app that could save your life!" />
 </a></p>
-<p>Medical ID allows you to write your own profile that contains vital information such as your allergies, blood type, medical contacts, etc. that are essential to attending medics or other medical personnel having to take action in case of emergency. </p>
+<p>Medical ID allows you to write a medical profile that is accessible from the lock screen. In case of emergency, this profile enables quick access to vital information such as your allergies, blood type, medical contacts, etc. that are essential to attending first responders, medics or medical staff having to take action.</p>
 
 <p style="margin-top:30px; text-align:center"><a href="https://play.google.com/store/apps/details?id=app.medicalid">
   <img alt="Android app on Google Play"
