Minor design update + fixed google plus community link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -40,8 +40,8 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top" itemprop="name">
-                      <span class="light">Medical</span> ID
+                <a class="navbar-brand page-scroll" href="#page-top" itemprop="name" style="vertical-align: center">
+                     <img src="img/logo.png" alt="Medical ID" /> <span class="light">Medical</span> ID
                 </a>
             </div>
 
@@ -73,7 +73,7 @@
         <div class="intro-body">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2" style="background-color: rgba(0,0,0,0.45); padding: 50px; border-radius: 35px;">
+                    <div class="col-md-8 col-md-offset-2" style="background-color: rgba(0,0,0,0.55); padding: 50px; border-radius: 15px;">
                         <h1>The Android app that could save your life!</h1>
                         <p class="intro-text" style="text-align: justify" itemprop="description">Medical ID allows you to write a medical profile that is accessible from the lock screen of your phone. In case of emergency, this profile enables quick access to vital information such as your allergies, blood type, medical contacts, etc. that are essential to attending first responders or medical staff having to take action. </p>
                         <a href="#about" class="btn btn-circle page-scroll">
@@ -93,7 +93,7 @@
  <p>The app includes several features such as quick access to medical information from the lock screen, a security mode to protect your data, direct emergency contacts calls, numbers normalization for enabling international calls, multiple widget styles and much more. Since images are better than words, have a look at the video below.</p>
             </div>
         </div>
-                <div id="ytplayer"></div>  
+        <div id="ytplayer"></div>  
     </section>
 
     <!-- Download Section -->
@@ -128,7 +128,7 @@
                         <a href="https://github.com/medicalid" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/communities/116159104041598626229" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        <a href="https://plus.google.com/communities/104306518703791301038" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
                     </li>
                 </ul>
             </div>
