Updated play store link to reference the free version of the app

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Download Medical ID</h2>
                     <p>You can download the app from the Android App Store</p>
-                    <a href="https://play.google.com/store/apps/details?id=app.medicalid">
+                    <a href="https://play.google.com/store/apps/details?id=app.medicalid.free">
   <img alt="Get it on Google Play"
        src="http://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
 </a>
