--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Download Medical ID</h2>
-                    <p>You can download the app from the Android App Store</p>
+                    <p>You can download the app from the Play store for free</p>
                     <a href="https://play.google.com/store/apps/details?id=app.medicalid.free">
   <img alt="Get it on Google Play"
        src="http://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
@@ -138,7 +138,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Medical ID 2014</p>
+            <p>Copyright &copy; Medical ID 2014 - <a href="eula.html" style="color: white">Terms of Service</a></p>
         </div>
     </footer>
 
