Add new translation contributor

--- a/translation.html
+++ b/translation.html
@@ -81,6 +81,7 @@
 <li>Jens Devolder (nl-BE)</li>
 <li>Johannes Rottler (de)</li>
 <li>Matteo Tanzi (it)</li>
+<li>Petr Nekvinda (ch)</li>
 <li>Petter Källman (sv)</li>
 </ul>
             </div>
