--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Us</h2>
                 <p>Feel free to email us to provide some feedback about the app, give us suggestions for new features, or to just say hello!</p>
-                <p><a href="mailto:laurent.pellegrino@gmail.com?subject=Feedback Medical ID">laurent.pellegrino@gmail.com</a>
+                <p><a href="mailto:contact@medicalid.info?subject=Feedback Medical ID">contact@medicalid.info</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
@@ -138,7 +138,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Medical ID 2014 - <a href="eula.html" style="color: white">Terms of Service</a></p>
+            <p>Copyright &copy; Medical ID 2015 - <a href="eula.html" style="color: white">Terms of Service</a></p>
         </div>
     </footer>
 
