--- a/index.html
+++ b/index.html
@@ -1,187 +1,164 @@
-<!DOCTYPE html>
-<html lang="en">
 
+<!DOCTYPE HTML>
+<html>
 <head>
+	<title>Get Medical ID on Android</title>
+	<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+	<meta name=viewport content="width=device-width, initial-scale=1">
+	<style type="text/css">
+		@import url(http://fonts.googleapis.com/css?family=Roboto:400,500,700,900|Roboto+Condensed:400,700);
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+		html,body {
+			font-family: 'Roboto', sans-serif;
+			margin:0px;
+			padding:0px;
+		}
 
-    <title>Medical ID - The app that could save your life!</title>
+		#footer {
+			position:absolute;
+			bottom:40px;
+			width:100%;
+			text-align:center;
+			font-size:16px;
+			color:#bbb;
+			line-height:1.6em;
+		}
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+		a {
+			text-decoration:none;
+			-webkit-transition:0.3s;
+			color:#888;
+		}
 
-    <!-- Custom CSS -->
-    <link href="css/grayscale.css" rel="stylesheet">
+		a:hover {
+			color:#555;
+		}
 
-    <!-- Custom Fonts -->
-    <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+		#icon {
+			width:128px;
+			height:auto;
+      -webkit-animation: rotating 2s;
+      -moz-animation: rotating 2s;
+      -ms-animation: rotating 2s;
+      -o-animation: rotating 2s;
+      animation: rotating 2s;
+		}
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+		@-webkit-keyframes rotating /* Safari and Chrome */ {
+		  from {
+		    -ms-transform: rotate(0deg);
+		    -moz-transform: rotate(0deg);
+		    -webkit-transform: rotate(0deg);
+		    -o-transform: rotate(0deg);
+		    transform: rotate(0deg);
+		  }
+		  to {
+		    -ms-transform: rotate(360deg);
+		    -moz-transform: rotate(360deg);
+		    -webkit-transform: rotate(360deg);
+		    -o-transform: rotate(360deg);
+		    transform: rotate(360deg);
+		  }
+		}
+		@keyframes rotating {
+		  from {
+		    -ms-transform: rotate(0deg);
+		    -moz-transform: rotate(0deg);
+		    -webkit-transform: rotate(0deg);
+		    -o-transform: rotate(0deg);
+		    transform: rotate(0deg);
+		  }
+		  to {
+		    -ms-transform: rotate(360deg);
+		    -moz-transform: rotate(360deg);
+		    -webkit-transform: rotate(360deg);
+		    -o-transform: rotate(360deg);
+		    transform: rotate(360deg);
+		  }
+		}
 
+		#title {
+			width:100%;
+			text-align:center;
+			color:#3F3F3F;
+			font-size:38px;
+			font-weight:bold;
+			margin-top:30px;
+		}
+
+		#subtitle {
+			width:100%;
+			color:#3F3F3F;
+			opacity:0.6;
+			margin-top:10px;
+			font-size:24px;
+			text-align:center;
+		}
+
+		#icon-container {
+			width:214px;
+			margin-left:auto;
+			margin-right:auto;
+			text-align:center;
+			position:relative;
+		}
+
+		#container {
+			width:100%;
+			top:50%;
+			margin-top:-270px;
+			position:absolute;
+		}
+
+		#button {
+			width:100%;
+			text-align:center;
+			margin-top:50px;
+		}
+
+		#button img {
+			-webkit-transition:0.2s;
+			width:200px;
+			height:auto;
+			opacity:0.8;
+		}
+
+		#button img:hover {
+			opacity:1.0;
+		}
+
+	</style>
 </head>
+<body>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+	<div id="container">
+		<div id="icon-container">
+			<img id="icon" src="img/logo-red.png" height="64" width="64" alt="Medical ID Icon" title="Medical ID Icon" />
+		</div>
+		<div id="title">Medical ID</div>
+		<div id="subtitle">The app that could save your life!</div>
+		<div id="button">
+			<a href='https://play.google.com/store/apps/details?id=app.medicalid.free&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+        <img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/>
+      </a>
+		</div>
+	</div>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation" itemscope itemtype="https://schema.org/MobileApplication">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top" itemprop="name" style="vertical-align: center">
-                     <img src="img/logo.png" alt="Medical ID" /> <span class="light">Medical</span> ID
-                </a>
-            </div>
+	<div id="footer">
+    <a href="http://medicalid.info/eula.html">Terms of Use</a> - <a href="http://medicalid.info/privacy.html">Privacy Policy</a>
+    <br />Made with ♥ by <a href="http://www.pellegrino.link">Laurent Pellegrino</a> - &copy; <script>document.write(new Date().getFullYear())</script>
+  </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#download">Download</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    <!-- Intro Header -->
-    <header class="intro">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2" style="background-color: rgba(0,0,0,0.55); padding: 50px; border-radius: 15px;">
-                        <h1>The Android app that could save your life!</h1>
-                        <p class="intro-text" style="text-align: justify" itemprop="description">Medical ID allows you to write a medical profile that is accessible from the lock screen of your phone. In case of emergency, this profile enables quick access to vital information such as your allergies, blood type, medical contacts, etc. that are essential to attending first responders or medical staff having to take action. </p>
-                        <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+    ga('create', 'UA-52721165-3', 'auto');
+    ga('send', 'pageview');
 
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2" style="text-align: justify">
-                <h2 style="text-align: center">About Medical ID</h2>
- <p>The app includes several features such as quick access to medical information from the lock screen, a security mode to protect your data, direct emergency contacts calls, numbers normalization for enabling international calls, multiple widget styles and much more. Since images are better than words, have a look at the video below.</p>
-            </div>
-        </div>
-        <div id="ytplayer"></div>  
-    </section>
-
-    <!-- Download Section -->
-    <section id="download" class="content-section text-center">
-        <div class="download-section" style="background-color: rgba(0,0,0,.25)">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Medical ID</h2>
-                    <p>You can download the app from the Play store for free</p>
-                    <a href="https://play.google.com/store/apps/details?id=app.medicalid.free">
-  <img alt="Get it on Google Play"
-       src="http://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
-</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Us</h2>
-                <p>Feel free to email us to provide some feedback about the app, give us suggestions for new features, or to just say hello!</p>
-                <p><a href="mailto:contact@medicalid.info?subject=Feedback Medical ID">contact@medicalid.info</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/medicalidapp" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/medicalid" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/communities/104306518703791301038" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; Medical ID 2015 - <a href="eula.html" style="color: white">Terms of Service</a></p>
-        </div>
-    </footer>
-
-    <!-- jQuery Version 1.11.0 -->
-    <script src="js/jquery-1.11.0.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="js/jquery.easing.min.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="js/grayscale.js"></script>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-52721165-3', 'auto');
-  ga('send', 'pageview');
-
-</script>
-    <script>
-  // Load the IFrame Player API code asynchronously.
-  var tag = document.createElement('script');
-  tag.src = "https://www.youtube.com/player_api";
-  var firstScriptTag = document.getElementsByTagName('script')[0];
-  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-  // Replace the 'ytplayer' element with an <iframe> and
-  // YouTube player after the API code downloads.
-  var player;
-  function onYouTubePlayerAPIReady() {
-    player = new YT.Player('ytplayer', {
-      height: '390',
-      width: '640',
-      videoId: 'T45O1shlQcw'
-    });
-  }
-</script>
+  </script>
 
 </body>
-
 </html>
