Updated styling for EULA

--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
 <head>
 	<title>Get Medical ID on Android</title>
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<style type="text/css">
-		@import url(http://fonts.googleapis.com/css?family=Roboto:400,500,700,900|Roboto+Condensed:400,700);
 
-		html,body {
-			font-family: 'Roboto', sans-serif;
-			margin:0px;
-			padding:0px;
-		}
 
 		#footer {
 			position:absolute;
@@ -22,16 +17,6 @@
 			font-size:16px;
 			color:#bbb;
 			line-height:1.6em;
-		}
-
-		a {
-			text-decoration:none;
-			-webkit-transition:0.3s;
-			color:#888;
-		}
-
-		a:hover {
-			color:#555;
 		}
 
 		#icon {
