--- a/eula.html
+++ b/eula.html
@@ -21,7 +21,7 @@
   <div id="container">
     <h1>TERMS OF SERVICE AND END USER LICENSE AGREEMENT ("EULA")</h1>
 
-    <p>Applicable from <em>July 1, 2014</em>.</p>
+    <p>Last updated: <em>July 15, 2016</em>.</p>
 
     <p>The following terms of service and end user license agreement ("EULA") constitute an agreement between you and Laurent Pellegrino. This EULA governs your use of Software and Services (as specified below).
       For purposes of this EULA "Software" means all software programs distributed, published or otherwise made available by Laurent Pellegrino or its affiliates including, but not limited to mobile apps, downloadable/installable apps for personal computer, and apps accessed by means of a browser or other online communication method. Software also includes updates and upgrades as well as accompanying manual(s), packaging and other written, files, electronic or on-line materials or documentation, and any and all copies of such software and its materials.
@@ -29,6 +29,8 @@
       Software and Services are collectively referred to as "Laurent Pellegrino Services".</p>
 
       <p>THE SOFTWARE IS LICENSED, NOT SOLD. YOUR USE OF THE SOFTWARE (AS SPECIFIED BELOW) IS SUBJECT TO THE TERMS AND CONDITIONS SET FORTH IN THIS EULA. BY INSTALLING, USING OR ACCESSING THE LAURENT PELLEGRINO SERVICES OR ANY MATERIALS INCLUDED IN OR WITH THE LAURENT PELLEGRINO SERVICES, YOU HEREBY ACCEPT THE TERMS OF THIS EULA.</p>
+
+      <p>We reserve the right, at our sole discretion, to change, modify or otherwise alter the terms of this EULA  at any time. You must review them on a regular basis to keep yourself informed of any changes. By using Laurent Pellegrino Services, you agree that the posting of new or revised terms of this EULA shall constitute adequate and constructive notice to you of any and all revisions and changes. Continued use of Laurent Pellegrino Services after any such changes or after explicitly accepting the new terms of this EULA upon using Laurent Pellegrino services shall constitute your consent to such changes.</p>
 
       <p>If you do not accept the terms of this EULA, do not install, use or access the Laurent Pellegrino Services.</p>
 
