Resizer for mobile version

--- a/eula.html
+++ b/eula.html
@@ -5,6 +5,7 @@
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <style type="text/css">
+
   #container {
     margin: 16px auto;
     width: 66%;
@@ -13,6 +14,17 @@
     text-align: justify;
     text-justify: inter-word;
   }
+  @media only screen and (max-device-width: 480px) {
+  
+  #container {
+    margin: auto auto;
+    width: 100%;
+    border: 8px solid #fe0038;
+    padding: 16px 32px;
+    text-align: justify;
+    text-justify: inter-word;
+  }
+    }
 
   ol {list-style-type: lower-roman}
   </style>
