--- a/privacy.html
+++ b/privacy.html
@@ -14,6 +14,18 @@
     text-justify: inter-word;
 }
 
+  @media only screen and (max-device-width: 480px) {
+  
+  #container {
+    margin: auto auto;
+    width: 100%;
+    border: 8px solid #fe0038;
+    padding: 16px 32px;
+    text-align: justify;
+    text-justify: inter-word;
+  }
+    }
+
   ol {list-style-type: lower-roman}
         </style>
     </head>
