--- a/privacy.html
+++ b/privacy.html
@@ -32,10 +32,10 @@
     <body>
         <div id="container">
             <h1>PRIVACY POLICY</h1>
-            <p>Last updated: <em>July 15, 2016</em>.</p>
+            <p>Last updated: <em>July 28, 2016</em>.</p>
             <p>Medical data entered while creating profiles is only used on the 
             device(s) where the app is installed and not given to any third 
-            parties.<p>
+            parties without your consent.<p>
             <p>Depending of the version you are using, the app may require some 
             permissions to access your location, contacts but also to make phone 
             calls and send SMS. All permissions that are requested are solely 
