--- a/index.html
+++ b/index.html
@@ -3,114 +3,116 @@
 <html>
 <head>
 	<title>Get Medical ID on Android</title>
-	<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="sha384-2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<style type="text/css">
 
 
-		#footer {
-			position:absolute;
-			bottom:40px;
-			width:100%;
-			text-align:center;
-			font-size:16px;
-			color:#bbb;
-			line-height:1.6em;
-		}
+	#footer {
+		position:absolute;
+		bottom:40px;
+		width:100%;
+		text-align:center;
+		font-size:16px;
+		color:#bbb;
+		line-height:1.6em;
+	}
 
-		#icon {
-			width:128px;
-			height:auto;
-      -webkit-animation: rotating 2s;
-      -moz-animation: rotating 2s;
-      -ms-animation: rotating 2s;
-      -o-animation: rotating 2s;
-      animation: rotating 2s;
-		}
+	#icon {
+		width:128px;
+		height:auto;
+		-webkit-animation: rotating 2s;
+		-moz-animation: rotating 2s;
+		-ms-animation: rotating 2s;
+		-o-animation: rotating 2s;
+		animation: rotating 2s;
+	}
 
-		@-webkit-keyframes rotating /* Safari and Chrome */ {
-		  from {
-		    -ms-transform: rotate(0deg);
-		    -moz-transform: rotate(0deg);
-		    -webkit-transform: rotate(0deg);
-		    -o-transform: rotate(0deg);
-		    transform: rotate(0deg);
-		  }
-		  to {
-		    -ms-transform: rotate(360deg);
-		    -moz-transform: rotate(360deg);
-		    -webkit-transform: rotate(360deg);
-		    -o-transform: rotate(360deg);
-		    transform: rotate(360deg);
-		  }
+	@-webkit-keyframes rotating /* Safari and Chrome */ {
+		from {
+			-ms-transform: rotate(0deg);
+			-moz-transform: rotate(0deg);
+			-webkit-transform: rotate(0deg);
+			-o-transform: rotate(0deg);
+			transform: rotate(0deg);
 		}
-		@keyframes rotating {
-		  from {
-		    -ms-transform: rotate(0deg);
-		    -moz-transform: rotate(0deg);
-		    -webkit-transform: rotate(0deg);
-		    -o-transform: rotate(0deg);
-		    transform: rotate(0deg);
-		  }
-		  to {
-		    -ms-transform: rotate(360deg);
-		    -moz-transform: rotate(360deg);
-		    -webkit-transform: rotate(360deg);
-		    -o-transform: rotate(360deg);
-		    transform: rotate(360deg);
-		  }
+		to {
+			-ms-transform: rotate(360deg);
+			-moz-transform: rotate(360deg);
+			-webkit-transform: rotate(360deg);
+			-o-transform: rotate(360deg);
+			transform: rotate(360deg);
 		}
+	}
+	@keyframes rotating {
+		from {
+			-ms-transform: rotate(0deg);
+			-moz-transform: rotate(0deg);
+			-webkit-transform: rotate(0deg);
+			-o-transform: rotate(0deg);
+			transform: rotate(0deg);
+		}
+		to {
+			-ms-transform: rotate(360deg);
+			-moz-transform: rotate(360deg);
+			-webkit-transform: rotate(360deg);
+			-o-transform: rotate(360deg);
+			transform: rotate(360deg);
+		}
+	}
 
-		#title {
-			width:100%;
-			text-align:center;
-			color:#3F3F3F;
-			font-size:38px;
-			font-weight:bold;
-			margin-top:30px;
-		}
+	#title {
+		width:100%;
+		text-align:center;
+		color:#3F3F3F;
+		font-size:38px;
+		font-weight:bold;
+		margin-top:30px;
+	}
 
-		#subtitle {
-			width:100%;
-			color:#3F3F3F;
-			opacity:0.6;
-			margin-top:10px;
-			font-size:24px;
-			text-align:center;
-		}
+	#subtitle {
+		width:100%;
+		color:#3F3F3F;
+		opacity:0.6;
+		font-size:24px;
+		text-align:center;
+	}
 
-		#icon-container {
-			width:214px;
-			margin-left:auto;
-			margin-right:auto;
-			text-align:center;
-			position:relative;
-		}
+	#icon-container {
+		width:214px;
+		margin-left:auto;
+		margin-right:auto;
+		text-align:center;
+		position:relative;
+	}
 
-		#container {
-			width:100%;
-			top:50%;
-			margin-top:-270px;
-			position:absolute;
-		}
+	#container {
+		width:100%;
+		top:50%;
+		margin-top:-270px;
+		position:absolute;
+	}
 
-		#button {
-			width:100%;
-			text-align:center;
-			margin-top:50px;
-		}
+	#button {
+		width:100%;
+		text-align:center;
+		margin-top:50px;
+	}
 
-		#button img {
-			-webkit-transition:0.2s;
-			width:200px;
-			height:auto;
-			opacity:0.8;
-		}
+	#button img {
+		-webkit-transition:0.2s;
+		width:200px;
+		height:auto;
+		opacity:0.8;
+	}
 
-		#button img:hover {
-			opacity:1.0;
-		}
+	#button img:hover {
+		opacity:1.0;
+	}
+
+	#mc_embed_signup{width:350px; text-align: center; margin: 50px auto;}
 
 	</style>
 </head>
@@ -124,26 +126,43 @@
 		<div id="subtitle">The app that could save your life!</div>
 		<div id="button">
 			<a href='https://play.google.com/store/apps/details?id=app.medicalid.free&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-        <img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/>
-      </a>
+				<img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/>
+			</a>
+		</div>
+
+		<div id="mc_embed_signup">
+			<form action="//medicalid.us14.list-manage.com/subscribe/post?u=a6dbeafb2427520c32f7759b8&amp;id=57ea3415bd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+				<div id="mc_embed_signup_scroll">
+					<label for="mce-EMAIL" style="font-size: 1.2em">Subscribe to our Newsletter</label>
+					<div class="input-group">
+						<input class="form-control" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+						<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+						<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a6dbeafb2427520c32f7759b8_57ea3415bd" tabindex="-1" value=""></div>
+						<span class="input-group-btn">
+							<input class="btn btn-default" type="submit" value="OK" name="subscribe" id="mc-embedded-subscribe">
+						</span>
+					</div>
+				</div>
+			</form>
 		</div>
 	</div>
 
 	<div id="footer">
-    <a href="http://medicalid.info/eula.html">Terms of Use</a> - <a href="http://medicalid.info/privacy.html">Privacy Policy</a>
-    <br />Made with ♥ by <a href="http://www.pellegrino.link">Laurent Pellegrino</a> - &copy; <script>document.write(new Date().getFullYear())</script>
-  </div>
+		<a href="http://medicalid.info/eula.html">Terms of Use</a> - <a href="http://medicalid.info/privacy.html">Privacy Policy</a>
+		<br />Made with ♥ by <a href="http://www.pellegrino.link">Laurent Pellegrino</a> - &copy; <script>document.write(new Date().getFullYear())</script>
+	</div>
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-52721165-3', 'auto');
-    ga('send', 'pageview');
+	ga('create', 'UA-52721165-3', 'auto');
+	ga('send', 'pageview');
 
-  </script>
+	</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="sha384-VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
 
 </body>
 </html>
