Add meta for Google verification

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="sha384-2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<meta name=viewport content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="X30p2eS2sAnJtFkpQS_3XyBG4Li7QJ5_mbPhsL_ZECA" />
 	<style type="text/css">
 
 
