--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 	.email:focus {
 		border-color: #d9d9d9;
 	}
-	
+
 	::-webkit-input-placeholder { color:#bbb !important; }
 	::-moz-placeholder { color:#bbb !important; } /* firefox 19+ */
 	:-ms-input-placeholder { color:#bbb !important; } /* ie */
@@ -157,6 +157,11 @@
 	</div>
 
 	<div id="footer">
+		<p style="margin-top: 36px">
+				<a href="http://app-liv.com" target="_blank">
+					<img src="http://img.app-liv.com/link/appliv_s_w.png" alt="Appliv -iPhone/Android App Discovery Website" />
+				</a>
+		</p>
 		<a href="http://medicalid.info/eula.html">Terms of Use</a> - <a href="http://medicalid.info/privacy.html">Privacy Policy</a>
 		<br />Made with ♥ by <a href="http://www.pellegrino.link">Laurent Pellegrino</a> - &copy; <script>document.write(new Date().getFullYear())</script>
 	</div>
