Add link to appview review

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 
 	<div id="footer">
 		<p style="margin-top: 36px">
-				<a href="http://app-liv.com" target="_blank">
-					<img src="http://img.app-liv.com/link/appliv_s_w.png" alt="Appliv -iPhone/Android App Discovery Website" />
+				<a href="https://app-liv.com/android/en/2018910" target="_blank">
+                    Medical ID is reviewed in <br /> <img src="http://img.app-liv.com/link/appliv_s_w.png" alt="Appliv -iPhone/Android App Discovery Website" />
 				</a>
 		</p>
 		<a href="http://medicalid.info/eula.html">Terms of Use</a> - <a href="http://medicalid.info/privacy.html">Privacy Policy</a>
